--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,7 +3,8 @@ name: ESP32 Arduino Libs CI
 on:
   push:
     branches:
-    - master
+      - master
+      - release/v5.3
   pull_request:
     paths:
       - "**"
@@ -25,29 +26,30 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [esp32, esp32s2, esp32s3, esp32c2, esp32c3, esp32c6, esp32h2, esp32p4]
+        target:
+          [esp32, esp32s2, esp32s3, esp32c2, esp32c3, esp32c6, esp32h2, esp32p4]
       fail-fast: false
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: bash ./tools/prepare-ci.sh
+      - name: Install dependencies
+        run: bash ./tools/prepare-ci.sh
 
-    - name: Build Libs for ${{ matrix.target }}
-      run: bash ./build.sh -e -t ${{ matrix.target }}
+      - name: Build Libs for ${{ matrix.target }}
+        run: bash ./build.sh -e -t ${{ matrix.target }}
 
-    - name: Upload build
-      if: failure()
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-${{ matrix.target }}
-        path: build
+      - name: Upload build
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-${{ matrix.target }}
+          path: build
 
-    - name: Upload archive
-      uses: actions/upload-artifact@v4
-      with:
-        name: artifacts-${{ matrix.target }}
-        path: dist
+      - name: Upload archive
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifacts-${{ matrix.target }}
+          path: dist
 
   combine-artifacts:
     name: Combine artifacts
@@ -79,4 +81,3 @@ jobs:
         with:
           name: package-esp32-index-json
           path: dist/package_esp32_index.template.json
-
