--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,6 +1,9 @@
 name: IDF v5.3 with P4
 on:
-  workflow_dispatch: # Manually start a workflow
+  push:
+    branches:
+      - master
+      - release/v5.3
 
 jobs:
   build-libs:
