Reverting changes to original actions

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,38 +1,83 @@
-name: IDF v5.3 with P4
+name: ESP32 Arduino Libs CI
+
 on:
   push:
     branches:
-      - master
-      - release/v5.3
+    - master
+    - release/v5.3
+  pull_request:
+    paths:
+      - "**"
+      - "!**.md"
+      - "!.github/workflows/cron_build.yml"
+      - "!.github/workflows/cron.yml"
+      - "!.github/workflows/docker.yml"
+      - "!.github/workflows/repository_dispatch.yml"
+      - "!tools/config_editor/**"
+      - "!tools/docker/**"
+
+concurrency:
+  group: esp-idf-libs-${{github.event.pull_request.number || github.ref}}
+  cancel-in-progress: true
 
 jobs:
   build-libs:
-    name: Build Arduino Libs
+    name: Build Libs for ${{ matrix.target }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [esp32, esp32s3]
+      fail-fast: false
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: bash ./tools/prepare-ci.sh
+
+    - name: Build Libs for ${{ matrix.target }}
+      run: bash ./build.sh -e -t ${{ matrix.target }}
+
+    - name: Upload build
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-${{ matrix.target }}
+        path: build
+
+    - name: Upload archive
+      uses: actions/upload-artifact@v4
+      with:
+        name: artifacts-${{ matrix.target }}
+        path: dist
+
+  combine-artifacts:
+    name: Combine artifacts
+    needs: build-libs
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
         with:
-          python-version: "3.11"
-      - name: Install dependencies
-        run: bash ./tools/prepare-ci.sh
-      - name: Get current branch
+          path: dist
+          pattern: artifacts-*
+          merge-multiple: true
+
+      - shell: bash
         run: |
-          echo "GIT_BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_ENV
-      - name: Build Arduino Libs
-        env:
-          GITHUB_TOKEN: ${{ secrets.PUSH_TOKEN }}
-          GIT_AUTHOR_EMAIL: ${{ secrets.PUSH_EMAIL }}
-        run: bash ./build.sh
-      - name: Release
-        uses: jason2866/action-gh-release@v1.3
+          mkdir -p out
+          find dist -name 'arduino-esp32-libs-esp*.tar.gz' -exec tar zxvf {} -C out \;
+          cd out/tools/esp32-arduino-libs && tar zcf ../../../dist/esp32-arduino-libs.tar.gz * && cd ../../..
+          cp out/package_esp32_index.template.json dist/package_esp32_index.template.json
+
+      - name: Upload full esp32-arduino-libs archive
+        uses: actions/upload-artifact@v4
         with:
-          tag_name: ${{ github.run_number }}
-          body_path: release-info.txt
-          prerelease: true
-          files: |
-            dist/framework*
-            release-info.txt
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: esp32-arduino-libs
+          path: dist/esp32-arduino-libs.tar.gz
+
+      - name: Upload package_esp32_index.template.json
+        uses: actions/upload-artifact@v4
+        with:
+          name: package-esp32-index-json
+          path: dist/package_esp32_index.template.json
+
