--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -33,7 +33,7 @@ jobs:
         include:
           - idf_branch: "release/v5.1"
             lib_builder_branch: "release/v5.1"
-            targets: "esp32,esp32s2,esp32s3,esp32c3,esp32c6,esp32h2"
+            targets: "esp32,esp32s3"
           - idf_branch: "release/v5.3"
             lib_builder_branch: "release/v5.3"
-            targets: "esp32,esp32s2,esp32s3,esp32c3,esp32c6,esp32h2,esp32p4"
+            targets: "esp32,esp32s3"
