--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,21 +1,21 @@
-dependencies:
+# dependencies:
   # Required IDF version
-  idf: ">=5.3"
-  espressif/esp32-camera:
-    version: "master"
-    git: https://github.com/espressif/esp32-camera.git
-    require: public
-    rules:
-      - if: "target in [esp32, esp32s2, esp32s3]"
-  espressif/esp-tflite-micro:
-    version: ">=1.2.0"
-    require: public
-    rules:
-      - if: "target not in [esp32c2]"
-  espressif/esp-sr:
-    version: ">=1.4.2"
-    rules:
-      - if: "target in [esp32s3]"
+  # idf: ">=5.3"
+  # espressif/esp32-camera:
+  #   version: "master"
+  #   git: https://github.com/espressif/esp32-camera.git
+  #   require: public
+  #   rules:
+  #     - if: "target in [esp32, esp32s2, esp32s3]"
+  # espressif/esp-tflite-micro:
+  #   version: ">=1.2.0"
+  #   require: public
+  #   rules:
+  #     - if: "target not in [esp32c2]"
+  # espressif/esp-sr:
+  #   version: ">=1.4.2"
+  #   rules:
+  #     - if: "target in [esp32s3]"
   # espressif/esp_matter:
   #   version: "^1.3.0"
   #   require: public
